@@ -4,26 +4,31 @@ echo.
 echo Starting Artifactory...
 echo.
 echo To stop, press Ctrl+c
+
 setlocal
 
-if "%JAVA_HOME%" == "" set _JAVACMD=java.exe
-if not exist "%JAVA_HOME%\bin\java.exe" set _JAVACMD=java.exe
-if "%_JAVACMD%" == "" set _JAVACMD="%JAVA_HOME%\bin\java.exe"
-
+rem defaults
 set ARTIFACTORY_HOME=%~dp0..
-set LIB_DIR=%ARTIFACTORY_HOME%\lib
-set CLASSPATH=%ARTIFACTORY_HOME%\artifactory.jar
+set CATALINA_HOME=%ARTIFACTORY_HOME%\tomcat
+set JAVA_OPTIONS=-server -Xms512m -Xmx2g -Xss256k -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+UseG1GC
+set CATALINA_OPTS=%JAVA_OPTIONS% -Dartifactory.home=%ARTIFACTORY_HOME% -Dfile.encoding=UTF8
 
-for %%a in ("%LIB_DIR%\*.*") do call :process %%~nxa
-goto :next
+if not "%JAVA_HOME%" == "" goto javaOk
+if not "%JRE_HOME%" == "" goto javaOk
+echo Neither the JAVA_HOME nor the JRE_HOME environment variable is defined
+echo Will try to guess them from the registry.
 
-:process
-set CLASSPATH=%CLASSPATH%;%LIB_DIR%\%1
-goto :end
+:findJDK
+FOR /F "usebackq skip=2 tokens=3" %%A IN (`REG QUERY "HKLM\Software\JavaSoft\Java Development Kit" /v CurrentVersion 2^>nul`) DO (set CurVer=%%A)
+FOR /F "usebackq skip=2 tokens=3*" %%A IN (`REG QUERY "HKLM\Software\JavaSoft\Java Development Kit\%CurVer%" /v JavaHome 2^>nul`) DO (set JAVA_HOME=%%A %%B)
+if not "%JAVA_HOME%" == "" goto javaOk
 
-:next
+:findJRE
+FOR /F "usebackq skip=2 tokens=3" %%A IN (`REG QUERY "HKLM\Software\JavaSoft\Java Runtime Environment" /v CurrentVersion 2^>nul`) DO (set CurVer=%%A)
+FOR /F "usebackq skip=2 tokens=3*" %%A IN (`REG QUERY "HKLM\Software\JavaSoft\Java Runtime Environment\%CurVer%" /v JavaHome 2^>nul`) DO (set JRE_HOME=%%A %%B)
 
-%_JAVACMD% -server -Xms1g -Xmx1g -XX:PermSize=128m -XX:MaxPermSize=128m -XX:NewSize=512m -XX:MaxNewSize=512m -XX:+UseConcMarkSweepGC -Djetty.home="%ARTIFACTORY_HOME%" -Dartifactory.home="%ARTIFACTORY_HOME%" -Dfile.encoding=UTF8 -cp "%CLASSPATH%" org.artifactory.standalone.main.Main %*
+:javaOk
+rem start
+%CATALINA_HOME%\bin\catalina.bat run
 
 @endlocal
-:end
